# pay-near

./: .gitignore  1212.0816e8d35950bcf4.js  1212.10dfe819ce0648d1.js  1212.221f338429731d5d.js  1212.22b5f0b09406a6d4.js  1212.2768badb8bc282df.js  1212.48267073ae3fb92a.js  1212.8ad47c003952919e.js  1212.bbc1ba56e97cbd53.js  1212.c9a37b0cb5d79b58.js  1212.f1461390b88e3a85.js  1212.f19bd75eb60c1609.js  3rdpartylicenses.txt  404.html  4054.2d049e6ca940e206.js  4054.32328f1e2be5d123.js  4054.33b1e00ffedf2d23.js  4054.5075ff2bf08cb45e.js  4054.6e89a062811c3f47.js  4054.d8e664d35065ebab.js  408.4421fcbda57cbd33.js  4189.05dd528e86ea7bae.js  5168.0fa4c05216c849ad.js  5168.3596face42caa74d.js  5168.6c5fbeb72d643c91.js  5168.7d78ac8c202191d4.js  5168.dfadce333f7440f8.js  5168.f93c4784438633b8.js  6847.019c18314ec7310a.js  6847.23ba7105b5ee9272.js  6847.4e5159208972c0b1.js  6847.54a5afe0b2645bd3.js  6847.6b70660c3e452a22.js  6847.8fe9b49a49213950.js  6847.d5f3ea4755946295.js  8574.1b5a9956b63ae8f4.js  8574.5486e3a287bc2e7a.js  8574.592bc285b5afe13a.js  8574.62624083b2216160.js  8574.7c2f4f569cd55d58.js  (+47 more)
android/app/: build.gradle
android/app/release/: output-metadata.json
contract/pay-near/: Cargo.toml  README.md  deploy.sh  test.sh
contract/pay-near/sandbox-rs/: Cargo.toml
contract/pay-near/sandbox-rs/src/: metadata.rs  tests.rs
contract/pay-near/src/: earnings.rs  internal.rs  lib.rs  metadata.rs  transfer.rs
src/: global.scss  index.html  polyfills.ts
src/app/: app.component.ts
src/app/services/: login-here.service.spec.ts  login-here.service.ts  misc.service.ts  (+3 more)
(+45 files in other folders)
